# wallpaperchanger

./: README.md  install.sh  main.py  pyproject.toml  requirments.txt  todo.md  todo.org  uninstall.sh
systemd/: wallpaper.service  wallpaper.timer
tests/: test_Gnome.py  test_WindowManager.py
wallpaperchanger/: Gnome.py  WindowManager.py  main.py
