[project]
name = "wallpaperchanger"
version = "0.01"
description = "wallpaper collage mover"
authors = [
    {name = "arsyhiy", email = "arsyhiy32@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "black>=26.5.1,<27.0.0",
    "pytest>=9.0.3,<10.0.0"
]

[project.scripts]
wallpaperchanger = "wallpaperchanger.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wallpaperchanger*"]
exclude = ["systemd*"]
